Update comments for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- <a href='https://t.me/VLADIMIRNABOKOV' target='_blank'>KHRUSHCHEV</a> -->
 
 <body class="body">
-    <!-- ПРЕЛОАДЕР WINDOWS 98 -->
+    <!-- PRELOADER AROKENOS 98 -->
     <div id="win98-bootloader">
         <div class="boot-logo">
             <img src="./video/5431421093291344063-unscreen.gif" alt="ArokenOS '98 Logo">
@@ -121,7 +121,7 @@
                 Start
             </button>
             <div class="taskbar-apps" id="taskbarApps">
-                <!-- Сюда будут добавляться открытые приложения -->
+                <!-- TASKBAR PLACE -->
             </div>
             <div class="clock" style="position: relative;" id="master-volume">
                 <div class="master-volume-control">
@@ -174,11 +174,6 @@
                         <div><img class="desktop-icon__img" src="./img/icons/L-icon64.png" alt="live-on-credit"></div>
                         <div>Жизнь в кредит Deluxe Edition</div>
                     </div>
-
-                    <!-- <div class="menu-item">
-                        <div>▶</div>
-                        <div>Выполнить...</div>
-                    </div> -->
                     <div class="menu-item" onclick="ArokenOS.openApp('about')">
                         <div><img src="./img/icons/msg_information-2.png"></div>
                         <div>Справка</div>
@@ -197,10 +192,6 @@
                         <div><img class="start-menu-icon" src="./img/icons/notepad-32x32.png" alt="my-computer"></div>
                         <div>Блокнот</div>
                     </div>
-                    <!-- <div class="menu-item">
-                        <div>🧮</div>
-                        <div>Калькулятор</div>
-                    </div> -->
                 </div>
             </div>
 
@@ -212,14 +203,6 @@
                         </div>
                         <div>Мой компьютер</div>
                     </div>
-                    <!-- <div class="menu-item">
-                        <div>🖼️</div>
-                        <div>Мои рисунки</div>
-                    </div> -->
-                    <!-- <div class="menu-item">
-                        <div>🎵</div>
-                        <div>Моя музыка</div>
-                    </div> -->
                 </div>
 
                 <div class="menu-divider"></div>
@@ -249,7 +232,7 @@
                 <button onclick="talkToClippy()">Отправить</button>
             </div>
         </div>
-        <!-- Добавьте этот код в index.html где-нибудь в конце body -->
+
         <div id="music-player" class="music-player">
             <div class="music-player__header">
                 <span class="music-player__title">Музыкальный плеер</span>
@@ -275,7 +258,7 @@
             </div>
         </div>
 
-        <!-- Сама Скрепка (анимированная gif) -->
+
         <img src="./img/clippy/clippyChill.gif" id="clippy-agent" alt="Скрепка" title="Нажми на меня!">
     </div>
 
