Update comments from Russian to English

--- a/live-on-credit.html
+++ b/live-on-credit.html
@@ -130,7 +130,7 @@
 
   <!-- <script src="./js/games/live-on-credit.js"></script> -->
   <script>
-    // ======================== Глобальные переменные ========================
+    // ======================== global var ========================
     let state = {
       hp: 100,
       maxHp: 100,
@@ -147,7 +147,7 @@
     let timerInterval = null;
     let typeInterval = null;
 
-    // ======================== dialogi ========================
+    // ======================== staps ========================
     const story = {
       // ======================== start ========================
       start: {
