Fix comment typo in live-on-credit.html

--- a/live-on-credit.html
+++ b/live-on-credit.html
@@ -426,7 +426,7 @@
         choicesDiv.appendChild(div);
       });
 
-      // onEnter хуки
+      // onEnter hooks
       if (node.onEnter) node.onEnter();
     }
 
